# quickscreen

./: AUTHORS  README  meson.build  module.desktop
data/: meson.build
src/: config.c  e_int_config_randr2_fork.c  e_mod_main.c  legacy_config.c  meson.build  quickscreen.h  ui_advanced_config.c  ui_wizard_config.c
